--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "BSD",
   "dependencies": {
     "yui": "~3.7.2",
-    "optimist": "~0.3.4"
+    "optimist": "~0.3.4",
+    "uglify-js": "~1.3.3"
   }
 }
